tests/view/snapshots/r#mod__view__map_input_to_commands__should_NOT_parse_non_string_invalid_json_nested.snap
---
source: tests/view/map_input_to_commands.rs
expression: output.unwrap()
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: POST
      headers: {}
      body:
        Raw: ""
    view_options:
      print_body_only: false
      suppress_output: false

