tests/view/snapshots/r#mod__view__map_input_to_commands__should_ignore_body_inputs_in_GET_request.snap
---
source: tests/view/map_input_to_commands.rs
expression: output
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: GET
      headers: {}
      body: "{\"Hello\":\"World\"}"

