tests/view/snapshots/r#mod__view__map_input_to_commands__should_not_parse_invalid_json_with_non_string_key.snap
---
source: tests/view/map_input_to_commands.rs
expression: output
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: GET
      headers: {}
      body:
        Json:
          Should: Parse

