tests/view/snapshots/r#mod__view__map_input_to_commands__should_parse_all_methods_subcommands_to_normal_submits-5.snap
---
source: tests/view/map_input_to_commands.rs
expression: output
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: HEAD
      headers: {}
      body:
        Raw: ""

