tests/view/snapshots/r#mod__view__map_input_to_commands__should_parse_body_values_with_nested_json_too.snap
---
source: tests/view/map_input_to_commands.rs
expression: output.unwrap()
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: POST
      headers: {}
      body:
        Json:
          id: "1"
          type: user
          user:
            address:
              city: NY
            age: 30
            name: John
    view_options:
      print_body_only: false
